welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: reassignment to val
 biscuit=false
        ^Program:12: error: type mismatch;
 found   : Unit
 required: Boolean
 for (x<- 1 to 6) {
       ^