welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
def biscuit():Boolean= {
	if (estSurBiscuit()) {
		return true
		}else {
			return false
		}
   }
 biscuit=false
 var x ="";
 for (x<- 1 to 6) {
 	avance();biscuit();
 }
}